--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,7 @@ ignore =
     F811
 # Не проверять код в перечисленных директориях:
 exclude = 
+    api/,
     tests/,
     */migrations/,
     venv/,
